--- a/slider_multiple.html
+++ b/slider_multiple.html
@@ -6,28 +6,22 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="wrapper">
-		<button class="prev">Prev</button>
-		<div class="slider">
+	<div class="slider">
+		<div class="prev">
+			<img src="images/left.png" alt="Previous slide">
+		</div>
+		<div class="next">
+			<img src="images/right.png" alt="Next slide">
+		</div>
+		<div class="slides">
 			<img src="images/1.jpg" alt="Slide 1" class="slide active">
 			<img src="images/2.jpg" alt="Slide 2" class="slide">
 			<img src="images/3.jpg" alt="Slide 3" class="slide">
 			<img src="images/4.jpg" alt="Slide 4" class="slide">
 			<img src="images/5.jpg" alt="Slide 5" class="slide">
 		</div>
-		<button class="next">Next</button>
-	</div>
-	<div class="wrapper">
-		<button class="prev">Prev</button>
-		<div class="slider">
-			<img src="images/1.jpg" alt="Slide 1" class="slide active">
-			<img src="images/2.jpg" alt="Slide 2" class="slide">
-			<img src="images/3.jpg" alt="Slide 3" class="slide">
-			<img src="images/4.jpg" alt="Slide 4" class="slide">
-			<img src="images/5.jpg" alt="Slide 5" class="slide">
-		</div>
-		<button class="next">Next</button>
-	</div>
+		<div class="icon-block"></div>
+	</div>	
 	<script src="main.js"></script>
 </body>
 </html>
