--- a/slider_multiple.html
+++ b/slider_multiple.html
@@ -7,18 +7,20 @@
 </head>
 <body>
 	<div class="slider">
-		<div class="prev">
-			<img src="images/left.png" alt="Previous slide">
-		</div>
-		<div class="next">
-			<img src="images/right.png" alt="Next slide">
-		</div>
-		<div class="slides">
+		<img class="full" src="images/full.png" alt="Previous slide">
+		<img class="prev" src="images/left.png" alt="Previous slide">
+		<img class="next" src="images/right.png" alt="Next slide">
+		<div class="slides slides-height">
 			<img src="images/1.jpg" alt="Slide 1" class="slide active">
 			<img src="images/2.jpg" alt="Slide 2" class="slide">
 			<img src="images/3.jpg" alt="Slide 3" class="slide">
 			<img src="images/4.jpg" alt="Slide 4" class="slide">
 			<img src="images/5.jpg" alt="Slide 5" class="slide">
+			<img src="images/6.jpg" alt="Slide 6" class="slide">
+			<img src="images/7.jpg" alt="Slide 7" class="slide">
+			<img src="images/8.jpg" alt="Slide 8" class="slide">
+			<img src="images/9.jpg" alt="Slide 9" class="slide">
+			<img src="images/10.jpg" alt="Slide 10" class="slide">
 		</div>
 		<div class="icon-block"></div>
 	</div>	
